Test/testjson/css/style.css
/* **************** PAGE INDEX : ************** */

/* coleur de font */
.body{
background-color: rgb(240,240,245);
}

/* Titre principale */
h1 { 
    color: rgb(50,50,50);
    font-size: 250%;
}

/* couleur du fond de l'header */
.fondHeader {
	background-color: rgb(225,225,225);
}

/* Encadrer du titre principale de la page index */
.grandCadre{
border: 3px solid rgb(50,150,180); padding: 1.6%; 
background-color: rgb(230,235,235);  
margin-top: 3%; margin-bottom: 3%;
-moz-border-radius-topleft: 5px; -moz-border-radius-topright: 5px; 
-moz-border-radius-bottomright: 5px; -moz-border-radius-bottomleft: 5px;
}

/* tire des catégories */
.titreCategorie{
	background-color: rgb(250,250,250);
	padding:0.20%;  border:0px solid #656ab0; 
	-moz-border-radius:9px; -khtml-border-radius:9px; 
	-webkit-border-radius:9px; border-radius:9px;
	margin-bottom: 3%; margin-top: 5%;
}

/* Encadrer du texte sous les titres de catégories */
.texteEncadrer{
	padding:2%; padding-left:2%; 
	border:1px dotted rgb(250,250,250); border-left:4px solid rgb(50,150,180); 
	margin-left:2%; margin-right:2%; font-size: 128%; 
	background-color: rgb(210,215,225);
}

/* gestion de l'afichage du footer */
.footerIndex{
	background-color: rgb(225,225,225);
	margin-top: 3%;
}


.footerDescription {
	float: right;
	text-align: center;
	text-decoration: bold;
	font-size: 100%;
	margin-right: 1%; margin-bottom: 1%; margin-top :1%;
	padding-top: 5%;
}



/* ************** PAGE PRINCIPALE ************* */

/* Titre en haut a gauche du site */
.encadrerDuTitre {
	border: 2px solid rgb(50,150,180); padding: 1px; 
	background-color: rgb(230,235,235); 
	-moz-border-radius-topleft: 5px; -moz-border-radius-topright: 5px; 
	-moz-border-radius-bottomright: 5px; -moz-border-radius-bottomleft: 5px;
	margin-top: 1%; margin-bottom: 2%;margin-right: 35%; margin-left: 35%;
}

/* Titre corespondant a l'un des 3 type de calcule (flux, pression ..) */
.titre_calcul {
	text-decoration: underline;
	margin-top: 4%; margin-bottom: 4%;margin-right: 0%; margin-left: 0%;
}

/* estétique du bouton de réduction ou agrandisement d'une zone de calcule */
.bouton_R_A {
	background-color: rgb(230,235,235); color: rgb(0,0,0);
	border: 1px solid rgb(0,0,0);
	margin-left: 3%;
}

/* encadrer de délimitation des zone de calcles */
.cadreCalcule , .cadreCalcule > .rubriquePage {
	background-color: rgb(250,250,250);
}

/* font ; caractéristique de la zone principale */
.zonePrincipale{
	background-color: rgb(240,240,245);
}

/* Zone de description en face des boutons et scrole barre */
.descriptionADroite{
	border-left : 5px solid rgb(250,250,250);  
	padding-left:6%;
	font-size: 130%;
	margin: 4%;
}

/* marge entre les rubrique (documentation,graphique,...) */
.rubriquePage , #parametres {
	margin-top: 0%;
}

/* Selecteur du set de donner a utiliser */ 
.selDataSet{
	background-color: rgb(250,250,250); font-size: 100%;
}

/* texte descriptife du set */
.infoSetLatex {
	margin-top: 1%;
}

/* estétique des boutons qui selection quelle variable prendre en abcisse */
.boutonAbscisse{
	background-color: rgb(200,200,200); color: rgb(0,0,0); margin-right: 2%;
}

/* affichage min et max des slider */
.minMaxSlider{
	font-size: 70%; 
	margin-right: 4%; margin-left: 4%;
}

.footerPage{
	background-color: rgb(225,225,225);
	/*margin-bottom: 1.5%;*/ margin-top: 1%;
}

.boutonReturn > button{
	background-color: rgb(230,235,235); color: rgb(0,0,0);
	border: 1px solid rgb(0,0,0);
	margin-bottom: 3%;
}

.minSlider{
    font-size: 70%; 
	margin-right: 4%; margin-left: 4%;
    text-align: right;
}

.boutonReturn {
	text-align: center;
}

#dessinMur {
	/*padding-bottom: 1%;*/
}




/*site web : http://os-vps418.infomaniak.ch/vth/projetL3/ */

